--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-nodeunit": "~0.2.2",
     "handlebars": "~1.3.0"
+  },
+  "dependencies": {
+    "moment": "~2.5.0"
   }
 }
