--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.1",
-    "handlebars": "~1.3.0"
+    "handlebars": "^2.0.0"
   },
   "dependencies": {
     "moment": "~2.8.3"
